added animation for img

--- a/src/index.html
+++ b/src/index.html
@@ -34,18 +34,14 @@
 				<h1 class="search_title">Stay always tuned with planting trends</h1>
 				<p class="temperature">Current temperature is: 24°C</p>
 				<form class="search_form" action="submit"><input class="search_input" type="text" placeholder="Search" /></form>
-				<svg width="379" height="259" class="search_block_svg">
-					<use href="./img/svg/search_block.svg"></use>
-				</svg>
+				<img src="./img/svg/search_block.svg" alt="" class="search_svg" />
 			</div>
 		</header>
 		<main>
 			<!-- Блок с карточками топ дня и новая статья  -->
 			<div class="wrapper">
 				<div>
-					<svg width="78" height="36" class="new_article_svg">
-						<use href="./img/svg/new_badge.svg"></use>
-					</svg>
+					<img src="./img/svg/new_badge.svg" alt="" class="new_article_svg" />
 					<img src="./img/pic/new_article_img.webp" alt="Soil" />
 				</div>
 				<div>
@@ -79,7 +75,7 @@
 			<!-- Блок с карточками - Interesting  -->
 
 			<div class="article_list_wrapper">
-				<div>
+				<div class="decorative">
 					<h3 class="article_list_title">INTERESTING</h3>
 					<img src="./img/pic/article_image_small.webp" alt="" />
 					<p class="article_timing">Feb 23 · 8 min read</p>
@@ -88,7 +84,7 @@
 						Repotting a plant can seem like a difficult task because a lot of things can go wrong – you can damage...
 					</p>
 				</div>
-				<div class="list_block_align">
+				<div class="list_block_align decorative">
 					<img src="./img/pic/article_image_small(2).webp" alt="" />
 					<p class="article_timing">Feb 23 · 8 min read</p>
 					<h2 class="card_title">Plant pot secrets</h2>
@@ -96,7 +92,7 @@
 						Repotting a plant can seem like a difficult task because a lot of things can go wrong – you can damage...
 					</p>
 				</div>
-				<div class="list_block_align">
+				<div class="list_block_align decorative">
 					<img src="./img/pic/article_image_small(3).webp" alt="" />
 					<p class="article_timing">Feb 23 · 8 min read</p>
 					<h2 class="card_title">Professional Repot</h2>
@@ -104,7 +100,7 @@
 						Repotting a plant can seem like a difficult task because a lot of things can go wrong – you can damage...
 					</p>
 				</div>
-				<div>
+				<div class="decorative">
 					<img src="./img/pic/article_image_small.webp" alt="" />
 					<p class="article_timing">Feb 23 · 8 min read</p>
 					<h2 class="card_title">Watering mastery</h2>
@@ -112,7 +108,7 @@
 						Repotting a plant can seem like a difficult task because a lot of things can go wrong – you can damage...
 					</p>
 				</div>
-				<div>
+				<div class="decorative">
 					<img src="./img/pic/article_image_small(2).webp" alt="" />
 					<p class="article_timing">Feb 23 · 8 min read</p>
 					<h2 class="card_title">Plant pot secrets</h2>
@@ -120,7 +116,7 @@
 						Repotting a plant can seem like a difficult task because a lot of things can go wrong – you can damage...
 					</p>
 				</div>
-				<div>
+				<div class="decorative">
 					<img src="./img/pic/article_image_small(3).webp" alt="" />
 					<p class="article_timing">Feb 23 · 8 min read</p>
 					<h2 class="card_title">Professional Repot</h2>
@@ -130,15 +126,11 @@
 				</div>
 			</div>
 			<div class="tryForFree_container">
-				<svg width="107" height="24" class="logo">
-					<use width="107" height="24" href="./img/svg/logo.svg"></use>
-				</svg>
+				<img src="./img/svg/logo.svg" alt="logo" class="logo" />
 				<h2 class="tryForFree_title">Get unlimited access to exclusive articles</h2>
 				<p class="tryForFree_text">Get rid of limits and read everything you wish</p>
 				<button class="tryForFree_btn css-button-shadow-border-sliding--green" type="submit">Try For Free</button>
-				<!-- <svg class="">
-					<use href="./img/svg/try_for_free_block.svg"></use>
-				</svg> -->
+				<img src="./img/svg/try_for_free_block.svg" alt="" class="tryForFreeBlockSvg" />
 			</div>
 
 			<div class="article_list_wrapper">
