--- a/src/index.html
+++ b/src/index.html
@@ -125,6 +125,9 @@
 					</p>
 				</div>
 			</div>
+
+			<!-- блок розделитель с кнопкой попробовать бесплатно -->
+
 			<div class="tryForFree_container">
 				<img src="./img/svg/logo.svg" alt="logo" class="logo" />
 				<h2 class="tryForFree_title">Get unlimited access to exclusive articles</h2>
@@ -132,6 +135,8 @@
 				<button class="tryForFree_btn css-button-shadow-border-sliding--green" type="submit">Try For Free</button>
 				<img src="./img/svg/try_for_free_block.svg" alt="" class="tryForFreeBlockSvg" />
 			</div>
+
+			<!-- блок карточек с бесконечным скролом -->
 
 			<div class="article_list_wrapper">
 				<div>
@@ -190,22 +195,5 @@
 			</div>
 		</footer>
 		<script type="module" src="./index.js"></script>
-		<script async custom-element="amp-next-page" src="https://cdn.ampproject.org/v0/amp-next-page-1.0.js"></script>
-		<amp-next-page>
-			<script type="application/json">
-				[
-					{
-						"image": "https://example.com/image1.jpg",
-						"title": "This article shows first",
-						"url": "https://example.com/article1.amp.html"
-					},
-					{
-						"image": "https://example.com/image2.jpg",
-						"title": "This article shows second",
-						"url": "https://example.com/article2.amp.html"
-					}
-				]
-			</script>
-		</amp-next-page>
 	</body>
 </html>
